--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -4,7 +4,15 @@
 
 \eesTitlePage
 
-\eesCriticalReport{}
+\eesCriticalReport{
+  1 & 2  & vla & 2nd \halfNote\ in \B1: f′4–f4 \\
+    & 8  & S   & 3rd \eighthNote\ in \B1: a′8 \\
+    & 20 & B   & 4th \quarterNote\ in \B1: f4 \\
+    & 29 & org & 3rd \quarterNote\ of lower voice in \B1: G4 \\
+    & 59 & S   & 3rd \eighthNote\ in \B1: d″8 \\
+    & 65 & T   & 2nd/3rd \quarterNote\ in \B1: c′2 \\
+    & 77 & A   & 1st \quarterNote\ in \B1: f′8–\sharp e′8 \\
+}
 
 \eesToc{}
 
