--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -5,13 +5,22 @@
 \eesTitlePage
 
 \eesCriticalReport{
-  1 & 2  & vla & 2nd \halfNote\ in \B1: f′4–f4 \\
-    & 8  & S   & 3rd \eighthNote\ in \B1: a′8 \\
-    & 20 & B   & 4th \quarterNote\ in \B1: f4 \\
-    & 29 & org & 3rd \quarterNote\ of lower voice in \B1: G4 \\
-    & 59 & S   & 3rd \eighthNote\ in \B1: d″8 \\
-    & 65 & T   & 2nd/3rd \quarterNote\ in \B1: c′2 \\
-    & 77 & A   & 1st \quarterNote\ in \B1: f′8–\sharp e′8 \\
+  1 & 2   & vla  & 2nd \halfNote\ in \B1: f′4–f4 \\
+    & 8   & S    & 3rd \eighthNote\ in \B1: a′8 \\
+    & 20  & B    & 4th \quarterNote\ in \B1: f4 \\
+    & 29  & org  & 3rd \quarterNote\ of lower voice in \B1: G4 \\
+    & 59  & S    & 3rd \eighthNote\ in \B1: d″8 \\
+    & 65  & T    & 2nd/3rd \quarterNote\ in \B1: c′2 \\
+    & 77  & A    & 1st \quarterNote\ in \B1: f′8–\sharp e′8 \\
+  \midrule
+  2 & 20  & vl 2 & bar in \B1: e′2. \\
+    & 25  & vla  & 2nd \quarterNote\ in \B1: d′4 \\
+    & 38  & fl   & 1st \halfNote\ in \B1: b″4–c′′′4 \\
+    & 50  & vl 2 & last \eighthNote\ in \B1: e′8 \\
+    & 50  & vla  & 2nd \eighthNote\ in \B1: \sharp f′8 \\
+    & 90  & vl 2 & 1st \eighthNote\ in \B1: g″8 \\
+    & 119 & fl   & 3rd \quarterNote\ in \B1: g″8 \\
+    104 106 113 figures
 }
 
 \eesToc{}
