--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -27,6 +27,10 @@
     & 45  & vla   & 1st \eighthNote\ in \B1: c′8 \\
     & 46  & fag   & 7th \eighthNote\ in \B1: a8 \\
     & 64  & vl 2  & 2nd \eighthNote\ in \B1: g″8 \\
+  \midrule
+  4 & 38  & org   & 5th \eighthNote\ in \B1: B8 \\
+    & 49  & vl 1  & 1st \quarterNoteDotted\ in \B1: f′4. \\
+    & 88  & T     & 1st \halfNote\ in \B1: \flat a2 \\
 }
 
 \eesToc{}
