--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -31,6 +31,18 @@
   4 & 38  & org   & 5th \eighthNote\ in \B1: B8 \\
     & 49  & vl 1  & 1st \quarterNoteDotted\ in \B1: f′4. \\
     & 88  & T     & 1st \halfNote\ in \B1: \flat a2 \\
+  \midrule
+  5 & 2   & fl    & last \sixteenthNote\ in \B1: a″16 \\
+    & 3   & fl    & 4th \eighthNote\ in \B1: e′′′8 \\
+    & 5   & org   & last \eighthNote\ in \B1: c8 \\
+    & 15  & A     & 1st \quarterNote\ in \B1: a′4 \\
+    & 48  & S     & 2nd \quarterNote\ in \B1: a′4 \\
+    & 56  & A     & 1st \eighthNote\ in \B1: e′8 \\
+    & 60  & fl    & 3rd \eighthNote\ in \B1: f″8 \\
+    & 64  & S     & 1st \quarterNote\ in \B1: \flat b′8.–\flat b′16 \\
+    & 64  & A     & 7th \eighthNote\ in \B1: f′8 \\
+    & 66  & vla   & 4th \quarterNote\ in \B1: e′8–f′8 \\
+    & 68  & vl 2  & 1st \quarterNote\ in \B1: g′4 \\
 }
 
 \eesToc{}
