--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -43,6 +43,13 @@
     & 64  & A     & 7th \eighthNote\ in \B1: f′8 \\
     & 66  & vla   & 4th \quarterNote\ in \B1: e′8–f′8 \\
     & 68  & vl 2  & 1st \quarterNote\ in \B1: g′4 \\
+  \midrule
+  6 & 13  & T     & bar in \B1: c′2–c′4 \\
+    & 34  & vl 2  & bar in \B1: a′2. \\
+    & 45  & A     & 2nd \quarterNote\ in \B1: e′4 \\
+    & 72  & A     & 1st \quarterNote\ in \B1: g′4 \\
+    & 80  & cl 1  & 4th to last \eighthNote\ in \B1: f″4–e″8 \\
+    & 111 & fl    & bar in \B1: \wholeNoteRest \\
 }
 
 \eesToc{}
